force-app/main/default/objects/Forrester_SHIR_CRDR_SETTLEMENT_VIEW__x/Forrester_SHIR_CRDR_SETTLEMENT_VIEW__x.object-meta.xml
<CustomObject>
    <description>Forrester_SHIR_CRDR_SETTLEMENT_VIEW</description>
    <externalDataSource>Forrester</externalDataSource>
    <externalName>Forrester_SHIR_CRDR_SETTLEMENT_VIEW</externalName>
    <label>CRDR Settlement</label>
    <pluralLabel>CRDR Settlements</pluralLabel>
</CustomObject>