force-app/main/default/objects/Forrester_SHIR_CRDR_SETTLEMENT_VIEW__x/fields/BEGIN_DATE__c.field-meta.xml
<CustomField>
    <fullName>BEGIN_DATE__c</fullName>
    <description>BEGIN_DATE</description>
    <externalDeveloperName>BEGIN_DATE</externalDeveloperName>
    <label>Begins</label>
    <type>Date</type>
</CustomField>