force-app/main/default/objects/Forrester_SHIR_CRDR_SETTLEMENT_VIEW__x/fields/COMMENTS__c.field-meta.xml
<CustomField>
    <fullName>COMMENTS__c</fullName>
    <description>COMMENTS</description>
    <externalDeveloperName>COMMENTS</externalDeveloperName>
    <label>Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>