force-app/main/default/objects/Forrester_SHIR_CRDR_SETTLEMENT_VIEW__x/fields/OMC_RECID__c.field-meta.xml
<CustomField>
    <fullName>OMC_RECID__c</fullName>
    <description>OMC_RECID</description>
    <externalDeveloperName>OMC_RECID</externalDeveloperName>
    <label>Omc RecId</label>
    <length>24</length>
    <type>Text</type>
</CustomField>