force-app/main/default/objects/Forrester_SHIR_CRDR_SETTLEMENT_VIEW__x/fields/SETTLEMENT_PERCENT__c.field-meta.xml
<CustomField>
    <fullName>SETTLEMENT_PERCENT__c</fullName>
    <description>SETTLEMENT_PERCENT</description>
    <externalDeveloperName>SETTLEMENT_PERCENT</externalDeveloperName>
    <label>Settlement %</label>
    <precision>11</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>