force-app/main/default/objects/Forrester_SHIR_CRDR_SETTLEMENT_VIEW__x/fields/STATUS_DESC__c.field-meta.xml
<CustomField>
    <fullName>STATUS_DESC__c</fullName>
    <description>STATUS_DESC</description>
    <externalDeveloperName>STATUS_DESC</externalDeveloperName>
    <label>Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>