force-app/main/default/objects/Forrester_SHIR_CRDR_SETTLEMENT_VIEW__x/fields/WITHHOLDING_PERCENT__c.field-meta.xml
<CustomField>
    <fullName>WITHHOLDING_PERCENT__c</fullName>
    <description>WITHHOLDING_PERCENT</description>
    <externalDeveloperName>WITHHOLDING_PERCENT</externalDeveloperName>
    <label>Withholding %</label>
    <precision>11</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>